# hermes-agent

./: .gitignore  .hermes_history  .skills_prompt_snapshot.json  .update_check  auth.json  channel_directory.json  cold_tier.db  config.yaml  config.yaml.bak.20260625_083510  config.yaml.corrupt.20260625-092227.bak  context_length_cache.yaml  desktop-build-stamp.json  gateway.pid  gateway_state.json  hermes017-py.cmd  hermes017.cmd  kanban.db  lessons.yaml  memory_context.jsonl  models_dev_cache.json  ollama_cloud_models_cache.json  package-lock.json  pending_lessons.yaml  provider_models_cache.json  state.db  state.db-shm  toolsets.py  utils.py
cache/: openrouter_model_metadata.json
cron/: jobs.json
gateway/: stream_consumer.py
gateway-service/: Hermes_Dashboard.cmd  Hermes_Gateway.cmd
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  gctx.py  gpath2.py  manifest.json
health/: auto_rag_state.json  recovery_history.jsonl  watchdog_state.json
hermes_cli/: colors.py  cron.py  nous_billing.py  web_server.py
lsp/: package-lock.json  package.json
mcp-servers/forge-mcp/: pyproject.toml
mcp-servers/forge-mcp/src/forge_mcp/: __init__.py  __main__.py  server.py
mcp-servers/mcp-servers/maf-mcp/: pyproject.toml
memories/: MEMORY.md  USER.md
runtime/: active_sessions.json
scheduled_tasks/: diag_rdlcleanup.ps1  setup_rdlcleanup.ps1  verify_rdlcleanup.ps1
scripts/: _add_output_endpoint.py  _common.ps1  _patch_config_qmd.py  add_npm_to_path.ps1  auto_rag_sync.py  backup-honcho.cmd  backup-honcho.sh  backup-state.py  bootstrap_qmd_collections.ps1  check_paths.py  chrome_x_cdp_extract.py  chrome_x_cookies_extract.py  cleanup-rdclient-trace.py  cleanup-zombie-sessions.py  cleanup_loose_ends.ps1  (+52 more)
(+419 files in other folders)
