[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "forge-mcp"
version = "0.1.0"
description = "FastMCP wrapper for Forge guardrails -- exposes workflow execution, response validation, and rescue parsing as MCP tools."
requires-python = ">=3.12"
dependencies = [
    "forge-guardrails>=0.7.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
forge-mcp = "forge_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/forge_mcp/__main__.py" = "forge_mcp/__main__.py"
"src/forge_mcp/server.py" = "forge_mcp/server.py"

[tool.hatch.build.targets.sdist.force-include]
"src/forge_mcp/__main__.py" = "forge_mcp/__main__.py"
"src/forge_mcp/server.py" = "forge_mcp/server.py"